--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "speed-math",
   "version": "1.0.0",
   "main": "index.ts",
+  "homepage": "https://raynerkristanto.github.io/SpeedMath",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo export -p web",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "expo": "~54.0.33",
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.9.2"
   },
   "private": true
