--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "build:web": "expo export -p web && node fix-paths.js",
-    "deploy": "npm run build:web && gh-pages -d dist"
+    "deploy": "npm run build:web && gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "expo": "~54.0.33",
