--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deploy": "npm run build:web && gh-pages -d dist --dotfiles"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "expo": "~54.0.33",
     "expo-dev-client": "~6.0.20",
+    "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
